--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -7,6 +7,7 @@ body {
 }
 nav {
   padding: 30px;
+  background: #29662c;
 }
 nav ul {
   float: left;
@@ -21,13 +22,13 @@ nav ul li:not(:first-child) {
 nav ul li a {
   display: inline-block;
   outline: none;
-  color: #1f2227;
+  color: #ffffff;
   font-size: 16px;
   text-decoration: none;
   letter-spacing: 0.04em;
 }
 nav ul li a:hover {
-  color: #808080;
+  color: #df0000;
   text-decoration: none;
 }
 @media screen and (max-width: 560px) {
@@ -139,3 +140,5 @@ nav ul li a:hover {
 .hidden {
   display: none;
 }
+
+
