--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,16 @@
 <div class="wrapperr">
   <div class="img">
-    <!-- <img src="https://zupimages.net/up/20/14/kzjk.jpg" alt=""> -->
   </div>
   <div class="info">
     <p>Hébergez un animal, ou faites garder le votre gratuitement !</p>
+    <!-- <div style="width: 100px; height: 100px; background: blue;"></div> -->
     <div id="container">
-      <button class="learn-more">
+      <!-- <button class="learn-more">
         <span class="circle" aria-hidden="true">
           <span class="icon arrow"></span>
         </span>
-        <span class="button-text">Je m'inscris</span>
-      </button>
+        <span  routerLink="/devenir-membre" class="button-text">Je m'inscris</span>
+      </button> -->
     </div>
   </div>
 </div>
