--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,7 +5,6 @@
 
 .wrapperr {
   background-repeat: no-repeat;
-  position: relative;
 }
 
 
@@ -25,7 +24,7 @@
   background: #FCBE1E;
   position: absolute;
   top: 13%;
-  right: 16%;
+  right: 24%;
   border-radius: 100%;
 
   p {
@@ -40,7 +39,7 @@
 
 @media screen and (max-width: 883px) {
   .info {
-    position: relative;
+    position: initial;
     border-radius: initial;
     right: 0%;
     width: 100%;
@@ -65,7 +64,7 @@
 
 @media screen and (max-width: 600px) {
   .info {
-    position: relative;
+    position: initial;
   }
 }
 
@@ -88,8 +87,6 @@ $black: #8A6C13;
     box-sizing: border-box;
   }
 }
-
-
 
 button {
   margin-top: 45px;
@@ -190,3 +187,5 @@ button {
     justify-self: center;
   }
 }
+
+
