--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -11,7 +11,7 @@ body {
 nav {
   padding: 14px;
   // background: #29662c;
-  background: linear-gradient(10deg, rgb(255, 203, 59), #fff1c4);
+  background: linear-gradient(10deg, rgb(255, 203, 59), #FFFF00);
   width: 100%;
 }
 nav ul {
@@ -29,17 +29,23 @@ nav ul li a {
   display: inline-block;
   outline: none;
   color: #ffffff;
-  font-size: 20px;
+  font-size: 21px;
   text-decoration: none;
   letter-spacing: 0.04em;
+
+  transition-property:all .2s linear 0s;
+	-moz-transition:all .2s linear 0s;
+	-webkit-transition:all .2s linear 0s;
+	-o-transition:all .2s linear 0s;
 }
 nav ul li a:hover {
-  color: #87ecf0;
-  text-decoration: underline;
+  color: #8A6C13;
+  text-decoration: wavy;
 }
 @media screen and (max-width: 560px) {
   nav {
     padding: 35px;
+    position: fixed;
     }
   .nav-container {
     position: fixed;
@@ -149,5 +155,9 @@ nav ul li a:hover {
 .hidden {
   display: none;
 }
+
+
+// NAV BUTTONS
+
 
 
