--- a/src/app/feature/login/login.component.html
+++ b/src/app/feature/login/login.component.html
@@ -29,7 +29,7 @@
       </fieldset>
 
       <fieldset>
-        <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Connection</button>
+        <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Connexion</button>
       </fieldset>
 
       <div class="alert alert-success" *ngIf="isSuccessful">
