--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<app-layout [username]="username" [isLoggedIn]="isLoggedIn"></app-layout>
+<app-layout [username]="username" [isLoggedIn]="isLoggedIn" [id]="id" ></app-layout>
