--- a/src/app/layout/navtest/navtest.component.html
+++ b/src/app/layout/navtest/navtest.component.html
@@ -5,32 +5,36 @@
       Animal Sitter
     </div>
   </div>
-  <!-- <div class="nav-btn">
-    <label for="nav-check">
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
-  </div> -->
+
+  <div class="containerr2" id="cont-2">
+    <!-- Btn-->
+    <button class="btn" id="btn-2"><i class="material-icons">menu</i><span>Accueil</span>
+      <ul class="dropdown">
+        <li><a routerLink="/">Accueil</a></li>
+        <li><a routerLink="/connexion">Accueillir un animal</a></li>
+        <li><a routerLink="/recherche">Trouver un sitter</a></li>
+      </ul>
+    </button>
+  </div>
+
 
   <div class="nav-links">
-    <a (click)="uncheck()" routerLink="/">Accueil</a>
-    <a (click)="uncheck()" routerLink="/devenir-membre">Inscription</a>
-    <a (click)="uncheck()" routerLink="/connection">Se connecter</a>
-    <a href="https://codepen.io/jo_Geek/" target="_blank">Codepen</a>
-    <a href="https://jsfiddle.net/user/jo_Geek/" target="_blank">JsFiddle</a>
+      <div class="nav-button"><a routerLink="/">Accueil</a></div>
+      <div class="nav-button"><a routerLink="/devenir-membre">Accueillir un animal</a></div>
+      <div class="nav-button"><a routerLink="/recherche">Chercher un sitter</a></div>
   </div>
-  <!-- <div class="profil">{{username}}</div> -->
 
   <div class="containerr">
     <!-- Btn-->
     <button class="btn"><span>{{username |uppercase}}</span><i class="material-icons">account_circle</i>
       <ul class="dropdown">
-        <li><a href="#">Mon compte</a></li>
-        <li><a>Mes animaux</a></li>
-        <li><a>Mes sitting</a></li>
-        <li><a href="#">Help</a></li>
-        <li><a (click)="logout()">Log Out</a></li>
+        <li *ngIf="!isLoggedIn"><a routerLink="/devenir-membre">Inscription</a></li>
+        <li *ngIf="!isLoggedIn"><a routerLink="/connexion">Se connecter</a></li>
+        <li *ngIf="isLoggedIn"><a [routerLink]="['/mon-compte', id]">Mon compte</a></li>
+        <li *ngIf="isLoggedIn"><a>Mes animaux</a></li>
+        <li *ngIf="isLoggedIn"><a>Mes sitting</a></li>
+        <li *ngIf="isLoggedIn"><a href="#">Help</a></li>
+        <li *ngIf="isLoggedIn"><a (click)="logout()">Log Out</a></li>
       </ul>
     </button>
   </div>
