--- a/src/app/feature/account-creation/account-creation.component.scss
+++ b/src/app/feature/account-creation/account-creation.component.scss
@@ -1,7 +1,9 @@
 @import url( https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
+@import '../../../ressource/variables.scss';
+
 
 .test {
-  background: #CEEDEF;
+  // background: $animal-light-blue;
   height: 93.2230491638%;
 }
 
