--- a/src/app/feature/account/account.component.html
+++ b/src/app/feature/account/account.component.html
@@ -1,27 +1,24 @@
-<div style="width: 600px; height: 300px; background: crimson;">
-
+<div class="container photo">
+  <div class="pic">
+  </div>
 </div>
+
 <div class="container">
   <div class="row">
-    <div class="mt-3 col-sm-12">
-      <div class="profil-photo">PHOTO</div>
-    </div>
-  </div>
-  <div class="row">
     <div class="mt-3 col-sm-4">
-       <div class="profil-info">
-        PROFIL INFO
-       </div>
+      <div class="profil-info">
+        Mes informations :
+      </div>
     </div>
     <div class="mt-3 col-sm-4">
-       <div class="profil-info">
-        PROFIL INFO
-       </div>
+      <div class="profil-info">
+        Mes animaux
+      </div>
     </div>
     <div class="mt-3 col-sm-4">
-       <div class="profil-info">
+      <div class="profil-info">
         PROFIL INFO
-       </div>
+      </div>
     </div>
   </div>
 </div>
