--- a/src/app/feature/login/login.component.scss
+++ b/src/app/feature/login/login.component.scss
@@ -1,4 +1,5 @@
 @import url( https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
+@import '../../../ressource/variables.scss';
 
 .test {
   background: #CEEDEF;
