--- a/src/app/feature/account-creation/account-creation.component.scss
+++ b/src/app/feature/account-creation/account-creation.component.scss
@@ -47,24 +47,31 @@ body {
 }
 
 #contact {
-  background: #f9f9f9;
+  background: $animal-yellow-light;
   padding: 25px;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   padding-top: 8%;
 }
 
 #contact h3 {
+  letter-spacing: 3px;
+  color: white;
   display: block;
   font-size: 30px;
   font-weight: 300;
-  margin-bottom: 10px;
+  font-weight: bold;;
+  margin-bottom: 30px;
+  text-align: center;
 }
 
 #contact h4 {
   margin: 5px 0 15px;
   display: block;
-  font-size: 13px;
+  font-size: 18px;
   font-weight: 400;
+  margin-bottom: 24px;
+  color: white;
+
 }
 
 fieldset {
