--- a/src/app/feature/account/account.component.scss
+++ b/src/app/feature/account/account.component.scss
@@ -1,7 +1,9 @@
 @import '../../../ressource/variables.scss';
 .body {
   background: $animal-light-blue!important;
-
+}
+.global {
+  background: $animal-light-blue!important;
 }
 
 h3 {
@@ -9,8 +11,16 @@ h3 {
 
 }
 
+p {
+  margin-top: 52px;
+  margin-bottom: 1rem;
+  text-align: left;
+}
+
 label {
-  margin-top: 10px;
+  margin-top: 15px;
+  float: left;
+  font-style: italic;
 }
 
 fieldset {
@@ -65,3 +75,37 @@ input {
   text-align: center;
   border-radius: 100%;
 }
+
+datalist {
+  overflow-y:auto;
+}
+
+option {
+  width: 100%;
+}
+
+
+// BOUTONS MODIFIER SAUVEGARDER
+
+.btn {
+  margin: 0 auto;
+  display: block;
+  width: 100%;
+}
+
+
+// COLONNE ANIMAUX
+.animals {
+  min-height: 500px;;
+}
+
+.animals > h2 {
+  padding-top: 100px;
+  font-style: italic;
+  color: $animal-kaki;
+}
+
+h5{
+  color: $animal-kaki;
+}
+
