--- a/src/app/feature/animal-search/animal-search.component.html
+++ b/src/app/feature/animal-search/animal-search.component.html
@@ -1,1 +1,67 @@
-<p>animal-search works!</p>
+<div class="banner">
+  <h1>Trouver une annonce</h1>
+</div>
+
+
+
+
+
+
+
+
+
+<ul class="nav nav-tabs justify-content-center nav-pills" id="myTab" role="tablist">
+  <li class="nav-item">
+    <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
+      aria-selected="true">Les annonces</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile"
+      aria-selected="false">Autour de moi</a>
+  </li>
+
+</ul>
+
+<div class="tab-content" id="myTabContent">
+  <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+    <div class="container">
+
+      <div>
+        <input type="text" [(ngModel)]="postcode"> <button class="btn" (click)="getSittings()">CHERCHER</button>
+      </div>
+
+      <!-- infinite scroll div -->
+      <div class="search-results" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
+        (scrolled)="onScroll()">
+
+        <div class="col-md-4 p-2" *ngFor="let sitting of sittingList">
+
+          <app-sittings [sitting]="sitting"></app-sittings>
+
+        </div>
+
+      </div>
+
+      <!-- spinner -->
+      <div class="row pb-5">
+        <div class="col-md-12 p-5">
+          <ngx-spinner bdOpacity=0.9 bdColor="" size="default" color="#581f87" type="ball-pulse-sync"
+            [fullScreen]="false">
+          </ngx-spinner>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+
+
+
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
