--- a/src/app/feature/error/error.component.scss
+++ b/src/app/feature/error/error.component.scss
@@ -6,6 +6,8 @@
   background-size: cover;  // max-width: 100%;
   // max-height: 100%;
   display: block; /* remove extra space below image */
+  margin-top: 30px;
+
 
 }
 
