--- a/src/app/feature/login/login.component.scss
+++ b/src/app/feature/login/login.component.scss
@@ -35,6 +35,10 @@ body {
   // position: relative;
 }
 
+form {
+  min-height: 300px;
+}
+
 #contact input[type="text"],
 #contact input[type="email"],
 #contact input[type="tel"],
@@ -151,6 +155,13 @@ fieldset {
 
 :-ms-input-placeholder {
   color: #888;
+}
+
+// Spinner
+.spinner-border {
+  margin: 0 auto;
+  display: block;
+  margin-top: 24px;
 }
 
 // RESPONSIVE
