--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,3 +14,23 @@
     </div>
   </div>
 </div>
+
+<div style="width: 100%; background:  #FCBE1E;">
+  <div class="container" style="width: 100%!important;">
+    <div class="row">
+      <div class="col-md-6 infos" style="margin-top: 20px;">
+      Qui sommes nous ?
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 offset-md-6 infos"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 infos"></div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 offset-md-6 infos"></div>
+    </div>
+  </div>
+</div>
+
