--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Mukta:700');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import '../../ressource/variables.scss';
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&display=swap");
+
+
 
 
 .wrapperr {
   background-repeat: no-repeat;
+  display: block;
+  height: 65%;
 }
 
 
@@ -22,22 +28,32 @@
   width: 400px;
   height: 400px;
   background: #FCBE1E;
-  position: absolute;
-  top: 13%;
-  right: 24%;
+  position: relative;
+  top: -650px;
   border-radius: 100%;
+  left: 57%;
 
   p {
-    color: white;
+    color: $animal-kaki-dark;
     font-size: 30px;
-    font-family: 'Fredoka One', cursive;
-    margin-left: 9%;
-    margin-right: 2%;
-    margin-top: 29%;
+    font-family: "Baloo Bhai 2", cursive;
+    margin-left: 12%;
+    margin-top: 26%;
+    padding-top: 140px;
   }
 }
 
+.infos {
+  height: 300px;
+  background: $animal-light-blue2;
+  border-radius: 92px;
+  margin-top: 15px;
+}
+
 @media screen and (max-width: 883px) {
+  .wrapperr {
+    height: 88%;
+  }
   .info {
     position: initial;
     border-radius: initial;
@@ -186,6 +202,12 @@ button {
     align-self: center;
     justify-self: center;
   }
+}
+
+.content{
+  width: 100%;
+  height: 1000px;
+  background: red;
 }
 
 
