--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -1,3 +1,3 @@
-<!-- <app-navbar></app-navbar> -->
-<app-navtest [username]="username" [isLoggedIn]="isLoggedIn" [id]="id"></app-navtest>
+<app-navbar [username]="username" [isLoggedIn]="isLoggedIn" [id]="id"></app-navbar>
+<!-- <app-navtest [username]="username" [isLoggedIn]="isLoggedIn" [id]="id"></app-navtest> -->
 <router-outlet></router-outlet>
