--- a/src/app/layout/navbar/navbar.component.scss
+++ b/src/app/layout/navbar/navbar.component.scss
@@ -1,163 +1,246 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import "../../../ressource/variables.scss";
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&display=swap");
 
+.navbar {
+  background: linear-gradient(
+    45deg,
+    $animal-yellow-dark,
+    $animal-yellow-light2
+  );
+  font-family: "Baloo Bhai 2", cursive;
 
-body {
-  font-family: 'Fredoka One', cursive;
-  font-weight: 400;
-}
-* {
-  box-sizing: border-box;
-}
-nav {
-  padding: 14px;
-  // background: #29662c;
-  background: linear-gradient(10deg, rgb(255, 203, 59), #FFFF00);
-  width: 100%;
-}
-nav ul {
-  float: none;
-  text-align: center;
-}
-nav ul li {
-  display: inline-block;
-  // float: left;
-}
-nav ul li:not(:first-child) {
-  margin-left: 25px;
-}
-nav ul li a {
-  display: inline-block;
-  outline: none;
-  color: #ffffff;
-  font-size: 21px;
-  text-decoration: none;
-  letter-spacing: 0.04em;
-
-  transition-property:all .2s linear 0s;
-	-moz-transition:all .2s linear 0s;
-	-webkit-transition:all .2s linear 0s;
-	-o-transition:all .2s linear 0s;
-}
-nav ul li a:hover {
-  color: #8A6C13;
-  text-decoration: wavy;
-}
-@media screen and (max-width: 560px) {
-  nav {
-    padding: 35px;
-    position: fixed;
+  & .navbar-brand {
+    margin-left: 30px;
+    font-size: 36px;
+    color: $animal-kaki-dark;
+  }
+  & .navbar-nav {
+    margin: 0 auto;
+    padding-right: 244px;
+    font-size: 23px;
+    & .nav-item {
+      margin-left: 10px;
+      margin-right: 10px;
+      & .nav-link {
+        color: $animal-kaki-dark;
+        max-width: 215px;
+        &:after{
+          display: block;
+          width: 100%;
+          height: 2px;
+          background-color: $animal-kaki-dark;
+          content: "";
+          transform: scale(0);
+          transition: transform .4s cubic-bezier(0.11, 0.7, 0, 1);
+        }
+        &:hover:after {
+          transform: scale(1);
+        }
+      }
     }
-  .nav-container {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    background: rgb(255, 203, 59);
-    opacity: 0;
-    transition: all 0.2s ease;
   }
-  .nav-container ul {
+}
+
+.link4:after {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #CF2034;
+  content: "";
+  transform: scale(0);
+  transition: transform .3s cubic-bezier(0.11, 0.7, 0, 1);
+}
+
+.link4:hover:after {
+  transform: scale(1);
+}
+
+.active {
+  &a{
+    color: blue!important;
+  }
+
+}
+
+// BUTTON PROFIL
+
+// Fonts
+$body-font: "Roboto";
+
+// Font Weights
+$thin: 100;
+$light: 300;
+$regular: 400;
+$semibold: 600;
+$bold: 700;
+$ultra: 800;
+
+// Colors
+$black: #000000;
+$white: #ffffff;
+
+// Material Colors
+$dark-theme: (
+  primary: rgba($black, 0.87),
+  secondary: rgba($black, 0.54),
+  disabled: rgba($black, 0.26),
+);
+$light-theme: (
+  primary: rgba($white, 1),
+  secondary: rgba($white, 0.7),
+  disabled: rgba($white, 0.3),
+);
+
+// Pen Colors
+$accent: #5380f7;
+
+// Base Setting
+$base-color: map-get($dark-theme, primary);
+$base-font-family: $body-font, sans-serif;
+$base-font-size: 14px;
+$base-font-weight: $regular;
+$base-line-height: 1.5em;
+
+// Layout Settings
+$max-width: null;
+$columns: null;
+$gutters: null;
+
+// Elevation
+@mixin elevation($level) {
+  @if $level == 1 {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  } @else if $level == 2 {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  } @else if $level == 3 {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  } @else if $level == 4 {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  } @else if $level == 5 {
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+  }
+}
+
+.containerr {
+  position: absolute;
+  right: -77px;
+  top: 31px;
+  transform: translate(-50%, -50%);
+  font-size: 1px;
+}
+
+.btn {
+  margin-top: 15px;
+  outline: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-between;
+  // background: $accent;
+  min-width: 220px;
+  border: 0;
+  border-radius: 4px;
+  box-shadow: 0 4px 12px rgba($black, 0.1);
+  box-sizing: border-box;
+  padding: 16px 20px;
+  color: $white;
+  font-size: 12px;
+  font-weight: $semibold;
+  letter-spacing: 1.2px;
+  text-transform: uppercase;
+  overflow: hidden;
+  cursor: pointer;
+  font-size: 15px;
+  color: $animal-kaki-dark;
+
+
+  &:focus,
+  &:active {
+    .dropdown {
+      transform: translate(0, 20px);
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  .material-icons {
+    // border-radius: 100%;
+    animation: ripple 0.6s linear infinite;
+  }
+
+  .dropdown {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 100%;
+    left: 0;
+    background: $white;
     width: 100%;
-  }
-  .nav-container ul li {
-    display: block;
-    float: none;
-    width: 100%;
-    text-align: right;
-    margin-bottom: 10px;
-  }
-  .nav-container ul li:nth-child(1) a {
-    transition-delay: 0.2s;
-  }
-  .nav-container ul li:nth-child(2) a {
-    transition-delay: 0.3s;
-  }
-  .nav-container ul li:nth-child(3) a {
-    transition-delay: 0.4s;
-  }
-  .nav-container ul li:nth-child(4) a {
-    transition-delay: 0.5s;
-  }
-  .nav-container ul li:nth-child(5) a {
-    transition-delay: 0.6s;
-  }
-  .nav-container ul li:not(:first-child) {
-    margin-left: 0;
-  }
-  .nav-container ul li a {
-    padding: 10px 25px;
+    border-radius: 4px;
+    box-shadow: 0 4px 12px rgba($black, 0.1);
+    text-align: left;
     opacity: 0;
-    color: #fff;
-    font-size: 24px;
-    font-weight: 600;
-    transform: translateY(-20px);
-    transition: all 0.2s ease;
+    visibility: hidden;
+    transition: 0.3s ease;
+
+    &:before {
+      content: "";
+      position: absolute;
+      top: -6px;
+      left: 20px;
+      width: 0;
+      height: 0;
+      box-shadow: 2px -2px 6px rgba($black, 0.05);
+      border-top: 6px solid $white;
+      border-right: 6px solid $white;
+      border-bottom: 6px solid transparent;
+      border-left: 6px solid transparent;
+      transform: rotate(-45deg);
+      mix-blend-mode: multiple;
+    }
+
+    li {
+      z-index: 1;
+      position: relative;
+      background: $white;
+      padding: 0 20px;
+      color: $animal-kaki;
+
+      &:hover {
+        color: $animal-yellow-dark;
+      }
+
+      &.active {
+        color: $animal-yellow-dark;
+      }
+
+      &:first-child {
+        border-radius: 4px 4px 0 0;
+      }
+
+      &:last-child {
+        border-radius: 0 0 4px 4px;
+
+        a {
+          border-bottom: 0;
+        }
+      }
+    }
+
+    a {
+      display: block;
+      border-bottom: 1px solid rgba($black, 0.05);
+      padding: 16px 0;
+      color: inherit;
+      font-size: 15px;
+      text-decoration: none;
+    }
   }
-  .nav-open {
-    position: fixed;
-    right: 10px;
-    top: 10px;
-    display: block;
-    width: 48px;
-    height: 48px;
-    cursor: pointer;
-    z-index: 9999;
-    border-radius: 50%;
-  }
-  .nav-open i {
-    display: block;
-    width: 20px;
-    height: 2px;
-    background: #1f2227;
-    border-radius: 2px;
-    margin-left: 14px;
-  }
-  .nav-open i:nth-child(1) {
-    margin-top: 16px;
-  }
-  .nav-open i:nth-child(2) {
-    margin-top: 4px;
-    opacity: 1;
-  }
-  .nav-open i:nth-child(3) {
-    margin-top: 4px;
-  }
-}
-#nav:checked + .nav-open {
-  transform: rotate(45deg);
-}
-#nav:checked + .nav-open i {
-  background: #fff;
-  transition: transform 0.2s ease;
-}
-#nav:checked + .nav-open i:nth-child(1) {
-  transform: translateY(6px) rotate(180deg);
-}
-#nav:checked + .nav-open i:nth-child(2) {
-  opacity: 0;
-}
-#nav:checked + .nav-open i:nth-child(3) {
-  transform: translateY(-6px) rotate(90deg);
-}
-#nav:checked ~ .nav-container {
-  z-index: 9990;
-  opacity: 1;
-}
-#nav:checked ~ .nav-container ul li a {
-  opacity: 1;
-  transform: translateY(0);
-}
-.hidden {
-  display: none;
 }
 
-
-// NAV BUTTONS
-
-
-
+// BOOTSTRAP BREAK TABLET
+@media (max-width: 991px) {
+  .containerr {
+    display: none;
+  }
+}
