--- a/src/app/feature/account/account.component.scss
+++ b/src/app/feature/account/account.component.scss
@@ -3,11 +3,11 @@
   background: $animal-light-blue!important;
 }
 .global {
-  background: $animal-light-blue!important;
+  // background: $animal-light-blue!important;
 }
 
 h3 {
-  color: white;
+  color: $animal-kaki;
 
 }
 
