--- a/src/app/feature/account/my-animals/my-animals.component.scss
+++ b/src/app/feature/account/my-animals/my-animals.component.scss
@@ -51,7 +51,7 @@ ul {
 .aniphoto {
   margin-top: 20px;
   display: inline-block;
-  background-color: yellow;
+  // background-color: yellow;
   height: 100px;
   width: 100px;
   border-radius: 100%;
