--- a/src/app/feature/account-creation/account-creation.component.scss
+++ b/src/app/feature/account-creation/account-creation.component.scss
@@ -3,8 +3,6 @@
 
 
 .test {
-  // background: $animal-light-blue;
-  height: 93.2230491638%;
 }
 
 * {
@@ -66,6 +64,7 @@ form {
   font-weight: bold;;
   margin-bottom: 30px;
   text-align: center;
+  color: $animal-kaki-dark;
 }
 
 #contact h4 {
@@ -74,8 +73,7 @@ form {
   font-size: 18px;
   font-weight: 400;
   margin-bottom: 24px;
-  color: white;
-
+  color: $animal-kaki-dark;
 }
 
 fieldset {
@@ -117,26 +115,33 @@ fieldset {
   resize: none;
 }
 
-#contact button[type="submit"] {
-  cursor: pointer;
+// #contact button[type="submit"] {
+//   cursor: pointer;
+//   width: 100%;
+//   border: none;
+//   background: rgb(255, 215, 113);
+//   color: #fff;
+//   margin: 0 0 5px;
+//   padding: 10px;
+//   font-size: 15px;
+// }
+
+// #contact button[type="submit"]:hover {
+//   background: #FCBE1E;
+//   -webkit-transition: background 0.3s ease-in-out;
+//   -moz-transition: background 0.3s ease-in-out;
+//   transition: background-color 0.3s ease-in-out;
+// }
+
+// #contact button[type="submit"]:active {
+//   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+// }
+
+.btn {
   width: 100%;
-  border: none;
-  background: rgb(255, 215, 113);
-  color: #fff;
-  margin: 0 0 5px;
-  padding: 10px;
-  font-size: 15px;
-}
-
-#contact button[type="submit"]:hover {
-  background: #FCBE1E;
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background-color 0.3s ease-in-out;
-}
-
-#contact button[type="submit"]:active {
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+  margin-top: 20px;
+  height: 37px;
+  font-size: 20px!important;
 }
 
 .copyright {
