--- a/src/app/feature/animal-search/sittings/sittings.component.html
+++ b/src/app/feature/animal-search/sittings/sittings.component.html
@@ -4,7 +4,7 @@
   <div class="card shadow">
     <div class="card-body">
       <h5 class="card-title text-center ">{{sitting.title}}</h5>
-      <p class="card-text">{{sitting.city}}</p>
+      <p class="card-text">{{sitting.description}}</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
