--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
 </div>
 
 <div style="width: 100%; background:  #FCBE1E;">
-  <div class="container" style="width: 100%!important;">
+  <div class="container infos-container">
     <div class="row">
       <div class="col-md-6 infos" style="margin-top: 20px;">
       Qui sommes nous ?
@@ -33,4 +33,3 @@
     </div>
   </div>
 </div>
-
