--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -1,3 +1,6 @@
-<app-navbar [username]="username" [isLoggedIn]="isLoggedIn" [id]="id"></app-navbar>
-<!-- <app-navtest [username]="username" [isLoggedIn]="isLoggedIn" [id]="id"></app-navtest> -->
-<router-outlet></router-outlet>
+<div class="content">
+  <app-navbar [username]="username" [isLoggedIn]="isLoggedIn" [id]="id"></app-navbar>
+  <!-- <app-navtest [username]="username" [isLoggedIn]="isLoggedIn" [id]="id"></app-navtest> -->
+  <router-outlet></router-outlet>
+</div>
+
