--- a/src/app/feature/animal-search/animal-search.component.html
+++ b/src/app/feature/animal-search/animal-search.component.html
@@ -1,16 +1,39 @@
 <div class="banner">
-  <h1>Trouver une annonce</h1>
+  <!-- <h1>Trouver une annonce</h1> -->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="params">
+          <!-- INPUT POSTCODE -->
+          <label for="postcode">Code postal</label>
+          <input id="postcode" type="text" [(ngModel)]="postcode" placeholder="Exp : 75, 94" maxlength="2">
+          <!-- DATE 1 -->
+          <mat-form-field style="margin-right: 10px;">
+            <mat-label>Date de début</mat-label>
+            <input matInput [matDatepicker]="picker" [(ngModel)]="shiftBeggining"
+              (dateInput)="storeBeggining(shiftBeggining)" name="shiftBeggining">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+          <!-- DATE 2 -->
+          <mat-form-field>
+            <mat-label>Date de fin</mat-label>
+            <input matInput [matDatepicker]="picker2" [(ngModel)]="shiftEnd"
+              (dateInput)="storeEnd(shiftEnd)" name="shiftEnd">
+            <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+            <mat-datepicker #picker2></mat-datepicker>
+          </mat-form-field>
+        </div>
+        <div class="button">
+          <button class="btn btn-outline-success" (click)="search()">CHERCHER</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
 
-
-
-
-
-
-
-
-
-<ul class="nav nav-tabs justify-content-center nav-pills" id="myTab" role="tablist">
+<!-- <ul class="nav nav-tabs justify-content-center nav-pills" id="myTab" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
       aria-selected="true">Les annonces</a>
@@ -20,26 +43,31 @@
       aria-selected="false">Autour de moi</a>
   </li>
 
-</ul>
+</ul> -->
 
 <div class="tab-content" id="myTabContent">
   <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
     <div class="container">
 
-      <div>
-        <input type="text" [(ngModel)]="postcode"> <button class="btn" (click)="getSittings()">CHERCHER</button>
-      </div>
-
       <!-- infinite scroll div -->
       <div class="search-results" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50"
         (scrolled)="onScroll()">
-
-        <div class="col-md-12 p-2" *ngFor="let sitting of sittingList">
-
-          <app-sittings [sitting]="sitting"></app-sittings>
-
+        <div *ngFor="let sitting of sittingList">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-6 p-2">
+                <app-sittings [sitting]="sitting"></app-sittings>
+              </div>
+            </div>
+          </div>
         </div>
-
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 offset-md-6">
+            <app-map [sittingList]="sittingList"></app-map>
+          </div>
+        </div>
       </div>
 
       <!-- spinner -->
@@ -57,7 +85,6 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-
 
 
         </div>
