--- a/src/app/feature/animal-search/animal-search.component.scss
+++ b/src/app/feature/animal-search/animal-search.component.scss
@@ -1,4 +1,6 @@
 @import '../../../ressource/variables.scss';
+@import url("https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@600&display=swap");
+
 
 .banner {
   height: 200px;
@@ -39,4 +41,25 @@ ul {
 .tab-pane {
   padding-top: 40px;
   height: 500px;
+}
+
+.params {
+  text-align: center;
+  padding-top: 51px;
+}
+
+.button {
+  text-align: center;
+}
+
+label {
+  margin-right: 9px;
+}
+
+#postcode {
+  margin-right: 10px;
+}
+
+.btn{
+  border-radius: 50px!important;
 }
