--- a/src/app/feature/animal-search/sittings/sittings.component.html
+++ b/src/app/feature/animal-search/sittings/sittings.component.html
@@ -4,8 +4,10 @@
   <div class="card shadow">
     <div class="card-body">
       <h5 class="card-title text-center ">{{sitting.title}}</h5>
+      <p class="card-text">Annonce de : {{sitting.firstName}} {{sitting.lastName}}</p>
       <p class="card-text">{{sitting.description}}</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+      <p class="card-text">{{shiftBeggining}} au {{shiftEnd}}</p>
+      <img class="image" [src]="retrievedImage">
     </div>
   </div>
   <!-- single post card end -->
