--- a/src/app/feature/stting-creation/stting-creation.component.html
+++ b/src/app/feature/stting-creation/stting-creation.component.html
@@ -51,6 +51,8 @@
                   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                   <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
+
+
               </div>
               <div class="col-sm-6">
                 <mat-form-field>
@@ -87,3 +89,6 @@
     </div>
   </div>
 </div>
+
+
+<button (click)="checkDateValidity()">TEST</button>
